[project]
name = "graphrag-with-llama-3-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.0",
    "neo4j>=5.28.1",
    "pydantic>=2.10.6",
    "tqdm>=4.67.1",
]
