[project]
name = "graphrag-with-llama-3-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.0",
    "neo4j>=5.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pypdf>=5.4.0",
    "tqdm>=4.67.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "langchain-openai>=0.3.11",
    "neo4j-graphrag>=1.6.1",
    "langchain-neo4j>=0.4.0",
    "pytest>=8.3.5",
]
